@@ -72,8 +72,8 @@ class UsersController < ApplicationController
       original_status = @user.status
       @user.update_column :system_admin, params[:user][:system_admin]
       @user.update_column :status, params[:user][:status]
-      UserMailer.status_activated(@user).deliver if Rails.env.production? and original_status != @user.status and @user.status = 'active'
-      redirect_to(@user, notice: 'User was successfully updated.')
+      UserMailer.status_activated(@user).deliver if Rails.env.production? and original_status != @user.status and @user.status == 'active'
+      redirect_to @user, notice: 'User was successfully updated.'
     elsif @user
       render action: "edit"
     else
