@@ -16,37 +16,37 @@
   <% end %>
 
   <div class="control-group">
-    <%= f.label :first_name, class: 'control-label' %>
+    <%= f.label :first_name, nil, class: 'control-label' %>
     <div class="controls">
       <%= f.text_field :first_name %>
     </div>
   </div>
 
   <div class="control-group">
-    <%= f.label :last_name, class: 'control-label' %>
+    <%= f.label :last_name, nil, class: 'control-label' %>
     <div class="controls">
       <%= f.text_field :last_name %>
     </div>
   </div>
 
   <div class="control-group">
-    <%= label_tag :status, 'Status', class: 'control-label' %>
+    <%= f.label :status, nil, class: 'control-label' %>
     <div class="controls">
-      <%= select_tag :status, options_for_select(User::STATUS, @user.status) %>
+      <%= f.select :status, User::STATUS %>
     </div>
   </div>
 
   <div class="control-group">
-    <%= f.label :email, class: 'control-label' %>
+    <%= f.label :email, nil, class: 'control-label' %>
     <div class="controls">
       <%= f.text_field :email %>
     </div>
   </div>
 
   <div class="control-group">
-    <%= label_tag :system_admin, 'System Admin', class: 'control-label' %>
+    <%= f.label :system_admin, nil, class: 'control-label' %>
     <div class="controls">
-      <%= check_box_tag :system_admin, '1', @user.system_admin %>
+      <%= f.check_box :system_admin %>
     </div>
   </div>
 
